change hello word to hel

--- a/inde.html
+++ b/inde.html
@@ -38,7 +38,7 @@
         <p>this is a container</p>
     </div>
     <script
-        // console.log("hello world");
+        // console.log("hel");
             src="index.js">
          </script>
 </body>
