--- a/inde.html
+++ b/inde.html
@@ -38,7 +38,7 @@
         <p>this is a container</p>
     </div>
     <script
-        // console.log("hell0 to all");
+        // console.log("hell0 t1");
             src="index.js">
          </script>
 </body>
